Switch pushbuttons to btn-default bootstrap class; Partially fixes #39 - Improve readability of the buttons in hacker theme - Fix bugs with buttons and black system theme - Fix buttons in options page with black theme

--- a/src/hacker_style.css
+++ b/src/hacker_style.css
@@ -16,7 +16,7 @@ h2 {
     font-weight: 600;
     text-align: center;
     margin: 15px 0;
-    color: #fff;
+    color: white;
 }
 
 .list-group-item {
@@ -41,7 +41,7 @@ h2 {
     background-color: #48d298;
 }
 .list-group-item.active > .badge, .nav-pills > .active > a > .badge {
-    color: #fff;
+    color: white;
     background-color: #12b36f;
 }
 .form-control {
@@ -50,19 +50,33 @@ h2 {
     background: #f9f9f9;
     border-color: #e6e6e6;
 }
-.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
-    background-color: #f9f9f9;
-    opacity: 1;
-    border-color: #e6e6e6;
-}
-.btn,
-.input-group-addon{
+.btn-default,
+.input-group-addon,
+.open > .dropdown-toggle.btn-default{ /*fix grey bg color during the click*/
     border-radius: 0px;
     background-color: #48d298;
-    color: #fff;
+    color: white;
+    border-color: #48d298;
+}
+.btn-default:hover,
+.dropup > .dropdown-toggle.btn-default:hover{ /*fix grey bg color during the click*/
+    background-color: #12b36f;
+    border-color: #2fad78;
+    color: white;
+}
+.btn-default:focus,
+.open > .dropdown-toggle.btn-default:focus{
+    /* Add a border when buttons are focused by tab key */
+    border-color: #15774e;
+    color: white;
+    background-color: #2fad78;
+}
+.btn-default:active:focus {
+    /*fix grey bg color during the click*/
+    background-color: #2fad78;
 }
 .glyphicon{
-    color: #fff;
+    color: white;
 }
 .top-buttons .glyphicon{
     top: -2px;
